# emacs_config

./: init.el
lisp/: custom_funcs.el
lisp/themes/: dprandle-dark-theme.el
project_templates/cmake_unix/: CMakeLists.txt
project_templates/cmake_unix/.emacs/: build.sh  configure.sh  run.sh
project_templates/cmake_unix/src/: main.cpp
